implemented read. need to find a way to make write work. need to find a way for the user to write to the device and have it persist

--- a/char-driver/Makefile
+++ b/char-driver/Makefile
@@ -1,4 +1,4 @@
-obj-m += driver.o
+obj-m += cdriver.o
 
 .PHONY: build clean load unload
 
@@ -9,7 +9,6 @@ clean:
 	make -C /lib/modules/$(shell uname -r)/build clean M=$(PWD)
 
 load:
-	sudo insmod driver.ko
+	sudo insmod cdriver.ko
 unload:
-	-sudo rmmod driver
-
+	-sudo rmmod cdriver
